# auto-scan

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
packaging/: build_macos.sh  build_windows.ps1  entrypoint.py  icon.icns  icon_gen.py  installer.iss
src/auto_scan/: __init__.py  analyzer.py  cli.py  config.py  dedup.py  gui.py  history.py  image_utils.py  organizer.py  pipeline.py  redactor.py  settings.py  test_documents.py  usage.py
src/auto_scan/recognition/: __init__.py  engine.py  prompts.py
src/auto_scan/scanner/: discovery.py  escl.py
src/auto_scan/templates/: index.html
tests/: conftest.py  helpers.py  test_analyzer.py  test_config.py  test_dedup.py  test_discovery.py  test_e2e.py  test_engine_api.py  test_escl.py  test_history.py  test_image_utils.py  test_organizer.py  test_redactor.py  test_settings.py  test_usage.py
tests/fixtures/: __init__.py  documents.py
