[project]
name = "auto-scan"
version = "0.1.0"
description = "Scan documents from Canon GX7050 and auto-classify with AI"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "zeroconf",
    "anthropic",
    "Pillow",
    "img2pdf",
    "python-dotenv",
]

[project.scripts]
auto-scan = "auto_scan.cli:main"
auto-scan-gui = "auto_scan.gui:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
